[package]
name = "monthly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
csv = "1.1.6"
iced = {version = "0.5.2", features = ["canvas"]} 
serde = "1.0.151"
serde_derive = "1.0.151"
watch = "0.2.2"

