[package]
name = "monthly"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
csv = "1.1.6"
eframe = "0.20.1"
error-chain = "0.12.4"
glob = "0.3.0"
iced = {version = "0.5.2", features = ["canvas"]} 
rfd = "0.10.0"
serde = "1.0.151"
serde_derive = "1.0.151"
watch = "0.2.2"
